tests/should_fail/let_destructure_wrong_arity.nv
module test
// let tuple destructure with wrong arity (2 elements, 3 in pattern)
let (a, b, c) = (10, 20)
